src/ui/snapshots/lazydatabricks__ui__tests__full_mode_main_focused_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[0]─Runs - Detail - JSON - Output ⠋──────────────────────────────────────────┐"
"│  Run ID           Started      Duration  Result                              │"
"│› 50851892761075   01.09 10:08  2h00m     ◐ RUNNING                           │"
"│  50851892761073   31.08 10:08  1m12s     ✓ SUCCESS                           │"
"│  50851892761074   30.08 10:08  57s       ✗ FAILED                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│durations    █                                                                │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Move: j/k │ Open: Enter │ Back: Esc │ Actions: x │ Quit: q │ Keys: ?     v0.0.0"
