src/ui/snapshots/lazydatabricks__ui__tests__half_mode_jobs_focused_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status───────────────────────────┐┌─[0]─Runs - Detail ⠋──────────────────┐"
"┌─[2]─Jobs─────────────────────────────┐│Run ID         Started      Duration  │"
"│[someone] okonomi_gold                ││50851892761075 09/01 10:08  -         │"
"│nightly_bronze_ingest                 ││50851892761073 08/31 10:08  1m12s     │"
"│weekly_report                         ││50851892761074 08/30 10:08  57s       │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      │└──────────────────────────────────────┘"
"│                                      │┌─API log──────────────────────────────┐"
"│                                      ││GET  /api/2.2/jobs/list?l… 200    84ms│"
"│                                      ││GET  /api/2.2/jobs/runs/l… 200   131ms│"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└────────────────────────────────1 of 3┘│                                      │"
"┌─[3]─Pipelines──────────────────0 of 0┐└──────────────────────────────────────┘"
" Select: j/k │ Filter: / │ Mine: m │ Open: Enter │ Focus: 0-3 │ Quit: q   v0.1.0"
