src/ui/snapshots/lazydatabricks__ui__tests__help_jobs_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─┌ Keybindings ─ Jobs ───────────────────────────────────────────────┐────┐"
"│◐ dev│   j/↓  next job                                                   │t   │"
"│3 of │   k/↑  previous job                                               │NING│"
"│◐ 1 ·│    ^D  ten jobs down                                              │CESS│"
"└─────│    ^U  ten jobs up                                                │LED │"
"┌─[2]─│g/Home  first job                                                  │    │"
"│ 2h ◐│ G/End  last job                                                   │    │"
"│ 1d ✗│     /  filter by name                                             │    │"
"│    ·│     m  toggle mine only                                           │    │"
"│     │     f  cycle status: all, failed, active                          │    │"
"│     │     F  filter menu: status, mine only, clear text                 │    │"
"│     │     v  start or end a range; x then acts on every row             │    │"
"│     │ Enter  focus the main panel                                       │    │"
"└─────│     x  actions menu: run, pause schedule, repair, cancel, delete  │    │"
"┌─[3]─│     r  refresh jobs                                               │    │"
"│     │     o  open job in browser                                        │────┘"
"│     │     y  copy: URL, job ID, name, JSON                              │────┐"
"│     │     Y  copy the job list as text                                  │84ms│"
"└─────│     s  cycle sort: activity, name, created                        │31ms│"
"┌─[4]─│   0-4  focus panel by number                                      │    │"
"│     │   Tab  next side panel                                            │    │"
"│     │     R  refresh everything                                         │    │"
"└─────│     +  cycle screen mode                                          │────┘"
" Scrol└─────────────────────j/k: scroll │ Esc: close──────────────────────┘0.0.0"
