src/ui/snapshots/lazydatabricks__ui__tests__help_main_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]┌ Keybindings ─ Main ────────────────────────────────────────────────┐────┐"
"│◐ de│  j/↓  next run, or scroll a line                                   │t   │"
"│3 of│  k/↑  previous run, or scroll a line                               │NING│"
"│◐ 1 │   ^D  ten runs or lines down                                       │CESS│"
"└────│   ^U  ten runs or lines up                                         │LED │"
"┌─[2]│Enter  open the run; on JSON and Output, page the text              │    │"
"│ 2h │    /  search the text: highlights, hides nothing                   │    │"
"│ 1d │    n  next match                                                   │    │"
"│    │    N  previous match                                               │    │"
"│    │    W  mark this run; other runs' Detail then shows the difference  │    │"
"│    │l/]/→  next tab                                                     │    │"
"│    │h/[/←  previous tab                                                 │    │"
"│    │  Esc  back: close the run, then the panel                          │    │"
"└────│    x  actions menu                                                 │    │"
"┌─[3]│    r  refresh runs                                                 │    │"
"│    │    o  open job in browser                                          │────┘"
"│    │    y  copy: URL, run ID, job ID, name, JSON                        │────┐"
"│    │    Y  copy the runs table as text                                  │84ms│"
"└────│  0-4  focus panel by number                                        │31ms│"
"┌─[4]│  Tab  next side panel                                              │    │"
"│    │    R  refresh everything                                           │    │"
"│    │    +  cycle screen mode                                            │    │"
"└────│    @  toggle the API log                                           │────┘"
" Scro└──────────────────────j/k: scroll │ Esc: close──────────────────────┘0.0.0"
