src/ui/snapshots/lazydatabricks__ui__tests__jobs_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌ Jobs ────────────────────────────────────────────────────────────────────────┐"
"│[someone] okonomi_gold                                                        │"
"│nightly_bronze_ingest                                                         │"
"│weekly_report                                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
