src/ui/snapshots/lazydatabricks__ui__tests__jobs_focused_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Main──────────────────────────────────────────┐"
"│dev → adb-1.azuredatabric││nightly_bronze_ingest                              │"
"└─────────────────────────┘│job_id 2                                           │"
"┌─[2]─Jobs────────────────┐│                                                   │"
"│[someone] okonomi_gold   ││                                                   │"
"│nightly_bronze_ingest    ││                                                   │"
"│weekly_report            ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────2 of 3┘│                                                   │"
"┌─[3]─Pipelines───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Select: j/k │ Open: Enter │ Focus: 0-3/Tab │ Screen: + │ Quit: q         v0.1.0"
