src/ui/snapshots/lazydatabricks__ui__tests__json_tab_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON ⠋────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││{                                                  │"
"│3 of 3 jobs · 0s ago     ││  "deployment": {                                  │"
"│◐ 1 · ✗ 1 · ● 0          ││    "kind": "BUNDLE",                              │"
"└─────────────────────────┘│    "metadata_file_path": "/Workspace/Users/someone│"
"┌─[2]─Jobs by activity────┐│  },                                               │"
"│ 2h ◐ [someone] okonomi_…││  "edit_mode": "UI_LOCKED",                        │"
"│ 1d ✗ nightly_bronze_ing…││  "format": "MULTI_TASK",                          │"
"│    · weekly_report      ││  "max_concurrent_runs": 4,                        │"
"│                         ││  "name": "[someone] okonomi_gold",                │"
"│                         ││  "schedule": {                                    │"
"│                         ││    "pause_status": "UNPAUSED",                    │"
"│                         ││    "quartz_cron_expression": "0 0 2 * * ?",       │"
"└───────────────────1 of 3┘│    "timezone_id": "Europe/Oslo"                   │"
"┌─[3]─Pipelines ⠋ by activ┐│  },                                               │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
