src/ui/snapshots/lazydatabricks__ui__tests__main_focused_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Main──────────────────────────────────────────┐"
"│dev → adb-1.azuredatabric││[someone] okonomi_gold                             │"
"└─────────────────────────┘│job_id 1                                           │"
"┌─[2]─Jobs────────────────┐│                                                   │"
"│[someone] okonomi_gold   ││                                                   │"
"│nightly_bronze_ingest    ││                                                   │"
"│weekly_report            ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Back: 1-3/Tab │ Screen: + │ Quit: q                                      v0.1.0"
